--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 .pr {
     position: absolute;
     width: 1440px;
-    height: 960px;
+    height: 1920px;
     top: 0px;
     background: #0E1316;
 }
@@ -40,13 +40,12 @@
 
 .navbar {
     position: absolute;
+    list-style-type: none;
     display: flex;
-    text-decoration: none;
     width: 57px;
     height: 23px;
     left: 925px;
     top: 40px;
-
 }
 
 .navbar li a {
@@ -55,14 +54,20 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 23px;
-    margin-right: 75px;
-    text-decoration: none;
+    margin-right: 45px;
     white-space: nowrap;
+    list-style-type: none;
+    text-decoration: none;
     color: #FFFFFF;
 }
 
 .navbar li a:hover {
-    background-color: #ffffff;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    color: #F6DF03;
 }
 
 .logo-baner {
@@ -70,7 +75,7 @@
     width: 924.42px;
     height: 217px;
     left: calc(50% - 924.42px/2 + 0.21px);
-    top: calc(50% - 217px/2 - 26px);
+    top: calc(50% - 217px/2 - 496px);
 }
 
 .slogan {
@@ -102,16 +107,25 @@
     text-align: center;
     color: #FFFFFF;
     animation: jump 2s infinite;
-  }
-  
-  @keyframes jump {
+}
+
+@keyframes jump {
     0% {
-      transform: translateY(0);
+        transform: translateY(0);
     }
+
     50% {
-      transform: translateY(-20px);
+        transform: translateY(-20px);
     }
+
     100% {
-      transform: translateY(0);
+        transform: translateY(0);
     }
-  }
+}
+
+.slider {
+    position: absolute;
+    top: 960px;
+    width: 1440px;
+    height: 960px;
+}
