--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,58 @@
   top: 40px;
 }
 
+.box-search {
+  box-sizing: border-box;
+  position: absolute;
+  border: 1.52952px solid #FFFFFF;
+  border-radius: 19.5779px;
+}
+
+.pr-product {
+  width: 1920px;
+  height: 970px;
+  background: #171717;
+}
+
+.slideshow-container-product {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  gap: 20px;
+  position: absolute;
+  width: 749.5px;
+  height: 513px;
+  left: 885px;
+  top: 282px;
+  background: #D9D9D9;
+}
+
+.slideshow-container-product img {
+  height: 945px;
+  width: 749.5px;
+  left: 0px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.logo-f img {
+  position: absolute;
+  left: 80%;
+  right: 3.82%;
+  top: 89.69%;
+  bottom: 4.58%;
+}
+
+.retangle {
+  position: absolute;
+  left: 80%;
+  right: 0%;
+  top: 95.94%;
+  bottom: 0%;
+  background: #F6DF03;
+}
+
 .navbar li a {
   font-family: "DM Sans";
   font-style: normal;
@@ -446,6 +498,7 @@ button {
   height: 960px;
   animation: animater 5s ease-in-out infinite;
 }
+
 @keyframes animater {
   0% {
     background-image: url("../images/total-project-1.jpg");
@@ -461,6 +514,7 @@ button {
     background-position: center;
   }
 }
+
 .total-project-content-2 {
   display: flex;
   justify-content: flex-start;
@@ -473,6 +527,7 @@ button {
   font-size: 40px;
   color: #f6df03;
 }
+
 .total-project-content-2 p {
   display: flex;
 
