--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
   height: 970px;
   background: #171717;
 }
+
 .box {
   position: absolute;
   width: 141.63px;
@@ -103,9 +104,11 @@
   bottom: 9.3%;
   pointer-events: none;
 }
-.search-box{
+
+.search-box {
   background: none;
 }
+
 .vector-box {
   position: absolute;
   left: 27.86%;
@@ -114,6 +117,7 @@
   bottom: 13.28%;
   border: 1.52952px solid #FFFFFF;
 }
+
 .slideshow-container-product {
   display: flex;
   flex-direction: column;
@@ -136,6 +140,8 @@
   border-radius: 0px;
 }
 
+
+
 .logo-f img {
   position: absolute;
   left: 80%;
@@ -151,6 +157,12 @@
   top: 95.94%;
   bottom: 0%;
   background: #f6df03;
+}
+
+.navbar li a.active {
+  color: #F6DF03;
+  text-decoration: underline;
+  text-underline-offset: 6px;
 }
 
 .navbar li a {
@@ -195,7 +207,24 @@
   line-height: 52px;
   text-align: center;
   color: #f6df03;
+  background-image: linear-gradient(-225deg, #231557 0%, #44107a 29%, #ff1361 67%, #f6df03 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  background-clip: text;
+  text-emphasis-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
 }
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
 
 .croll {
   position: absolute;
